--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<p>Властивість background-position встановлює місце розташування фонової картинки. При цьому властивості зазвичай привласнюється пара значень для визначення горизонтального і вертикального положень.</p>
 		</div>
 		
-		<h2>Використання зображень-спрайтів для фонів елементів</h2>
+		<h2>Використання зображень-спрайтів для фону елементів</h2>
 		<p>CSS спрайт - це декілька різних картинок об'єднані в одне ціле зображення. Це зображення встановлюється як фонове для будь-якого елементу із заданою висотою і шириною.</p>
 		<a class="button" href="#button"></a>
 	</div>
